fix(styles): visible inline outline on edge to edge codeblocks

--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -27,6 +27,11 @@ article.content {
 
 	& > .highlight {
 		@include mixins.popout(var(--radius-site-base), var(--radius-site-small));
+		outline-offset: -0.25em;
+
+		@include mixins.window-normal {
+			outline-offset: 0;
+		}
 	}
 
 	& > .figure {
